--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,6 @@ jobs:
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2-beta
-        with:
-          node-version: ${{ secrets.NODE_VERSION }}
 
       - name: Update npm
         run: |
@@ -26,9 +24,10 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-          key: ${{ runner.os }}-node-${{ secrets.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-${{ secrets.NODE_VERSION }}
+            ${{ runner.os }}-node-
+            ${{ runner.os }}-
 
       - name: Install dependencies
         run: npm ci
