--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Unit Tests
+        run: npm run test
+
       - name: Build app and image
         run: |
           npm run build
