--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "validate": "svelte-check"
   },
   "devDependencies": {
@@ -13,6 +15,9 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@tsconfig/svelte": "^1.0.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "jest": "^26.6.3",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -21,6 +26,7 @@
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
+    "ts-jest": "^26.5.4",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
