--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
+  "compilerOptions": {
+    "types": [
+      "svelte",
+      "jest"
+    ],
+  },
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.spec.ts"
   ],
   "exclude": [
     "node_modules/*",
