chore: specify path to dockerfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,3 +48,4 @@ jobs:
           context: .
           push: false
           tags: homenitor/front:latest
+          file: ./containers/Dockerfile
