chore: replace amd64 base docker image with arm based image (#14)
Fixes #13

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: true
+          push: false
           tags: homenitor/front:latest
+          file: ./containers/Dockerfile
