--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,13 @@
     "titleBar.activeBackground": "#5ff64f",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#5ff64f99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "editorGroup.border": "#8bf87f",
+    "panel.border": "#8bf87f",
+    "sash.hoverBorder": "#8bf87f",
+    "sideBar.border": "#8bf87f",
+    "statusBarItem.remoteBackground": "#5ff64f",
+    "statusBarItem.remoteForeground": "#15202b"
   },
   "peacock.color": "#5ff64f"
 }
