--- a/containers/Dockerfile
+++ b/containers/Dockerfile
@@ -1,4 +1,4 @@
 FROM arm32v6/nginx:stable-alpine
-COPY public /usr/share/nginx/html
+COPY build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
